<resources>
    <string name="app_name">Go4Launch</string>

    <string name="facebook_application_id" translatable="false">1622778064523263</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1622778064523263</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_your_launch">Your launch</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>

    <string name="title_map_view">Map View</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Workmates</string>

    <string name="background_main" translatable="false">Background_main</string>
    <string name="iconapp" translatable="false">iconapp</string>
    <string name="connecting">Connecting</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_detail_place" translatable="false">DetailPlaceActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes placeModel in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="UnknownTime">Unknown Open/Close Time</string>
    <string name="error_unknown_error">error_unknown_error</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="signin">SignIn</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="call">CALL</string>
    <string name="like" translatable="false">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="adresse" translatable="false">French restaurant - 3 route de la Couarde</string>
    <string name="la_maison" translatable="false">la maison</string>
    <string name="no_going_there">You are not going there anymore</string>
    <string name="nice_choice">Nice choice ! see you there</string>
    <string name="onlyOne">Actually you are the only one</string>
    <string name="notification_title">It\'s time to eat !</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="PLACEREFERENCE" translatable="false">placeReference</string>
    <string name="TOKEN" translatable="false">token</string>
    <string name="tipe_your_text_here">Tipe your text Here</string>
    <string name="send">Send</string>
    <string name="actually_no_one_is_comming_here">Actually no one is comming Here !</string>
    <string name="how_much_do_you_love_this_place">How much do you love this place ?</string>
    <string name="known" translatable="false">(-)</string>
    <string name="search">Search</string>
    <string name="chat">First message ? don\'t be shy send it !</string>
    <string name="ok">OK</string>
    <string name="close_for_rest_of">Close for the rest of the day</string>
    <string name="close_open_at">Close. Open at</string>
    <string name="closingSoon">Closing Soon !</string>
    <string name="openUntil">Open until</string>
    <string name="closeToday">Close today</string>
    <string name="the_note_sent">The note has been sent</string>
    <string name="cancel">cancel</string>
    <string name="PermissionGarented">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="noplacefound">No Places Found</string>
    <string name="fetching_restaurant">Fetching nearby restaurants ...</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="dont_know_open_time">We don\'t know the opening time for this place</string>
    <string name="isJoining">\ is joining!</string>
    <string name="isGoingTo">\ is going to :\ </string>
    <string name="didntChoose">didn\'t choose yet</string>
    <string name="butYouAreTheOnlyOne">, but you are the only one to eat there ;(</string>
    <string name="with">with :</string>
    <string name="dontForget">Dont forget, you\'re going to :</string>
    <string name="account">Account</string>
    <string name="user_name">User Name</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="type_usr_name">Type your user name for valid this action</string>
    <string name="RECEIVER" translatable="false">receiver</string>
    <string name="your_chatting_with">You\'re chatting with</string>
    <string name="noChoosePlace">You did not choose a place</string>
    <string name="imagenoView">noView</string>

</resources>
