<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layoutToolChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarChat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--
        <LinearLayout
            android:id="@+id/infoReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
        -->

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/layoutToolChat"
        android:layout_above="@id/activity_mentor_chat_add_message_container">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/tvEmptyChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- ADD FILE BUTTON -->

        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/tipe_your_text_here"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

</RelativeLayout>